fix flags to be centered using text-align

--- a/contact.css
+++ b/contact.css
@@ -1,6 +1,7 @@
 html {
     padding: 20px;
     margin: 20px;
+    background-color: ghostwhite;
 }
 
 h1 {
